syntax = "proto3";
import "repository-schema.proto";
package docs;

message RemoteRepositorySchema {
  string owner = 1;
  string name = 2;
}